--- a/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
+++ b/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
@@ -35,7 +35,7 @@ stages:
       timeoutInMinutes: 5 # task times out in 1 day
       inputs:
         notifyUsers: |
-          sobhan.uv@gmail.com
+          mlops1217@gmail.com
         instructions: 'Please validate the build configuration and resume'
         onTimeout: 'resume'
 
